--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -189,11 +189,15 @@
                                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                                             <md-list class="md-dense" flex>
                                                                 <md-list-item ng-repeat="file in me.files" class="md-2-line" flex>
-                                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_download</md-icon>
-                                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
+                                                                    <button class="md-icon-button">
+                                                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_download</md-icon>
+                                                                    </button>
                                                                     <div class="md-list-item-text">
                                                                         <h3 style="font-size: 16px;">{{file.name}}</h3>
                                                                     </div>
+                                                                    <md-button class="md-secondary md-icon-button">
+                                                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
+                                                                    </md-button>
                                                                 </md-list-item>
                                                             </md-list>
                                                             <md-list ng-show="me.files.length == 0" class="md-dense" flex>
