--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -18,12 +18,12 @@
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ngf-select="uploadFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.xls'" ngf-accept="'.xls,.xlsx'" ngf-max-size="20MB">
+                        <md-button ngf-select="uploadFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.xls,.xlsx'" ngf-accept="'.xls,.xlsx'" ngf-max-size="20MB">
                             Excel Document
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ngf-select="uploadFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.ppt'" ngf-accept="'.ppt,.pptx'" ngf-max-size="20MB">
+                        <md-button ngf-select="uploadFiles($files, $invalidFiles)" ng-model="files" ngf-pattern="'.ppt,.pptx'" ngf-accept="'.ppt,.pptx'" ngf-max-size="20MB">
                             Powerpoint Document
                         </md-button>
                     </md-menu-item>
