--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -198,9 +198,8 @@
                                                                     </md-button>
                                                                 </md-list-item>
                                                             </md-list>
-                                                            <md-list ng-show="me.files.length == 0" class="md-dense" flex>
+                                                            <md-list ng-if="me.files.length === 0" class="md-dense" flex>
                                                                 <md-list-item class="md-2-line" flex>
-                                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_upload</md-icon>
                                                                     <div class="md-list-item-text">
                                                                         <h3 style="font-size: 16px;">No Files</h3>
                                                                     </div>
