--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -198,7 +198,7 @@
                                                                     </md-button>
                                                                 </md-list-item>
                                                             </md-list>
-                                                            <md-list ng-if="me.files.length === 0" class="md-dense" flex>
+                                                            <md-list ng-if="!me.files" class="md-dense" flex>
                                                                 <md-list-item class="md-2-line" flex>
                                                                     <div class="md-list-item-text">
                                                                         <h3 style="font-size: 16px;">No Files</h3>
