--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -193,7 +193,7 @@
                                                                     <div class="md-list-item-text">
                                                                         <h3 style="font-size: 16px;">{{file.name}}</h3>
                                                                     </div>
-                                                                    <md-button class="md-secondary md-icon-button">
+                                                                    <md-button class="md-secondary md-icon-button" ng-if="me.security.roles == 'Management'">>
                                                                         <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
                                                                     </md-button>
                                                                 </md-list-item>
@@ -212,10 +212,20 @@
                                                     <md-content style="padding: 0;">
                                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                                             <md-list class="md-dense" flex>
-                                                                <md-list-item class="md-2-line" flex>
-                                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
+                                                                <md-list-item ng-repeat="file in me.files_shared" class="md-2-line" flex>
+                                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_download</md-icon>
                                                                     <div class="md-list-item-text">
-                                                                        <h3 style="font-size: 16px;">No Files Shared</h3>
+                                                                        <h3 style="font-size: 16px;">{{file.name}}</h3>
+                                                                    </div>
+                                                                    <md-button class="md-secondary md-icon-button" ng-if="me.security.roles == 'Management'">
+                                                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
+                                                                    </md-button>
+                                                                </md-list-item>
+                                                            </md-list>
+                                                            <md-list ng-if="!me.files_shared" class="md-dense" flex>
+                                                                <md-list-item class="md-2-line" flex>
+                                                                    <div class="md-list-item-text">
+                                                                        <h3 style="font-size: 16px;">No Shared Files</h3>
                                                                     </div>
                                                                 </md-list-item>
                                                             </md-list>
