--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -65,6 +65,10 @@
         <div ng-if="user" ng-include src="'application/global/dialogs/myVault.html'"></div>
         <!-- myVault -->
 
+        <!-- myVault -->
+        <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/share.html'"></div>
+        <!-- myVault -->
+
         <!-- settings -->
         <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/settings.html'"></div>
         <!-- settings -->
