--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -193,7 +193,7 @@
                                                                     <div class="md-list-item-text">
                                                                         <h3 style="font-size: 16px;">{{file.name}}</h3>
                                                                     </div>
-                                                                    <md-button class="md-secondary md-icon-button" ng-click="my_vault_share_visible = true">
+                                                                    <md-button class="md-secondary md-icon-button" ng-click="openShare()">
                                                                         <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
                                                                     </md-button>
                                                                 </md-list-item>
