--- a/lib/client/app/application/global/dialogs/share.html
+++ b/lib/client/app/application/global/dialogs/share.html
@@ -6,20 +6,17 @@
     .share.popup {position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255,255,255,.36); z-index: 23;}
 </style>
 <div class="share popup" ng-show="my_vault_share_visible == true" layout="row" layout-align="center center" layout-wrap>
-    <md-card class="md-card-base card inputs md-whiteframe-6dp" flex="90" flex-sm="70" flex-gt-sm="60">
-        <md-card-title style="position: relative;">
-            <md-card-title-text>
-                <md-list-item>
-                    <div class="md-list-item-text">
-                        <h3 class="md-headline" style="font-size: 24px;">Share a document</h3>
-                    </div>
-                </md-list-item>
-            </md-card-title-text>
-        </md-card-title>
+    <md-card class="md-card-base card inputs md-whiteframe-6dp" flex="90" flex-sm="60" flex-gt-sm="30" style="position: relative;">
+        <md-card-header>
+            <md-card-header-text>
+                <span class="md-title">Share a document</span>
+                <span class="md-subhead">Share docuemnts with users</span>
+            </md-card-header-text>
+        </md-card-header>
         <md-card-content flex>
             <md-content flex>
-                <div layout="column" layout-align="center center" flex>
-                    <md-list-item>
+                <div layout="row" layout-align="start start" flex>
+                    <md-list-item flex="100">
                         <md-input-container class="md-block lightweight-md-input">
                             <label>Firstname</label>
                             <input name="firstname" ng-model="me.firstname" minlength="3" required>
@@ -29,13 +26,13 @@
                             </div>
                         </md-input-container>
                     </md-list-item>
-                    <md-list-item>
+                    <md-list-item flex="100">
                         <md-input-container class="md-block lightweight-md-dropdown">
-                            <label>State</label>
-                            <md-select ng-model="me.address.state">
+                            <label>Users</label>
+                            <md-select ng-model="share_to">
                                 <md-option><em>None</em></md-option>
-                                <md-option ng-repeat="state in states" ng-value="state.abbrev" ng-disabled="$index === 1">
-                                    {{state.abbrev}}
+                                <md-option ng-repeat="user in userlist" ng-value="user.id" ng-disabled="$index === 1">
+                                    {{user.firstname}} {{user.lastname}}
                                 </md-option>
                             </md-select>
                         </md-input-container>
@@ -43,10 +40,8 @@
                 </div>
             </md-content>
         </md-card-content>
-        <md-card-actions layout="row" layout-align="end center">
-            <md-button disabled>Cancel</md-button>
-            <div flex></div>
-            <md-button class="md-raised" ng-click="closeMyVault()" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Close</md-button>
-        </md-card-actions>
+        <md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="openMenu($mdMenu, $event)" style="position: absolute; bottom: -26px; right: 16px; background-color: {{base_hue_lightest.value}}!important;">
+                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">cloud_upload</md-icon>
+        </md-button>
     </md-card>
 </div>
