--- a/lib/client/app/application/global/dialogs/share.html
+++ b/lib/client/app/application/global/dialogs/share.html
@@ -3,14 +3,14 @@
     .md-default-theme .md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-default-theme .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator {background: {{primary_hue_normal.value}}!important;}
     .md-default-theme .md-datepicker-open .md-datepicker-calendar-icon, .md-datepicker-open .md-datepicker-calendar-icon {color: {{primary_hue_normal.value}}!important;}
     .md-default-theme .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator, .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator {border: 1px solid {{primary_hue_normal.value}};}
-    .share.popup {position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255,255,255,.36); z-index: 23;}
+    .share.popup {position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255,255,255,.48); z-index: 23;}
 </style>
 <div class="share popup" ng-show="my_vault_share_visible == true" layout="row" layout-align="center center" layout-wrap>
-    <md-card class="md-card-base card inputs md-whiteframe-6dp" flex="90" flex-sm="60" flex-gt-sm="30" style="position: relative;">
+    <md-card class="md-card-base card inputs md-whiteframe-2dp" flex="90" flex-sm="60" flex-gt-sm="30" style="position: relative;">
         <md-card-header>
             <md-card-header-text>
-                <span class="md-title">Share a document</span>
-                <span class="md-subhead">Share docuemnts with users</span>
+                <span class="md-title">Share {{file.filename}}</span>
+                <span class="md-subhead">Share a document with a user</span>
             </md-card-header-text>
         </md-card-header>
         <md-card-content flex>
@@ -21,7 +21,7 @@
                             <label>Users</label>
                             <md-select ng-model="share_to">
                                 <md-option><em>None</em></md-option>
-                                <md-option ng-repeat="user in userlist" ng-value="user.id" ng-disabled="$index === 1">
+                                <md-option ng-repeat="user in userslist" ng-value="user.id" ng-disabled="$index === 1">
                                     {{user.firstname}} {{user.lastname}}
                                 </md-option>
                             </md-select>
@@ -31,7 +31,7 @@
             </md-content>
         </md-card-content>
         <md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="openMenu($mdMenu, $event)" style="position: absolute; bottom: -26px; right: 16px; background-color: {{base_hue_lightest.value}}!important;">
-                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">cloud_upload</md-icon>
+                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">share</md-icon>
         </md-button>
     </md-card>
 </div>
