--- a/lib/client/app/application/global/dialogs/share.html
+++ b/lib/client/app/application/global/dialogs/share.html
@@ -21,7 +21,7 @@
                             <label>Users</label>
                             <md-select ng-model="share_to">
                                 <md-option><em>None</em></md-option>
-                                <md-option ng-repeat="user in userslist" ng-value="user.id" ng-disabled="$index === 1">
+                                <md-option ng-repeat="user in userslist" ng-value="user.id">
                                     {{user.firstname}} {{user.lastname}}
                                 </md-option>
                             </md-select>
@@ -30,6 +30,9 @@
                 </div>
             </md-content>
         </md-card-content>
+        <md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="closeShare()" style="position: absolute; bottom: -26px; right: 48px; background-color: {{base_hue_lightest.value}}!important;">
+                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
+        </md-button>
         <md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="openMenu($mdMenu, $event)" style="position: absolute; bottom: -26px; right: 16px; background-color: {{base_hue_lightest.value}}!important;">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">share</md-icon>
         </md-button>
