--- a/lib/client/app/application/global/dialogs/share.html
+++ b/lib/client/app/application/global/dialogs/share.html
@@ -9,7 +9,7 @@
     <md-card class="md-card-base card inputs md-whiteframe-2dp" flex="90" flex-sm="60" flex-gt-sm="30" style="position: relative;">
         <md-card-header>
             <md-card-header-text>
-                <span class="md-title">Share {{file.filename}}</span>
+                <span class="md-title">Share {{file.name}}</span>
                 <span class="md-subhead">Share a document with a user</span>
             </md-card-header-text>
         </md-card-header>
