--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -112,7 +112,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-messaging.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase-functions.js"></script>
     <!-- Firebase -->
