--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -194,7 +194,7 @@
         </md-toast>
     </script>
     <!-- Notification -->
-    <script>
+<!--     <script>
     navigator.serviceworker.register('../firebase-messaging-sw.js')
     .then((registration) => {
         const messaging = firebase.messaging();
@@ -212,7 +212,7 @@
             updateUIForPushPermissionRequired();
             setTokenSentToServer(false);
         }
-    });</script>
+    });</script> -->
     <!-- sripts -->
 
 
