--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -102,7 +102,7 @@
 
 
     <!-- sripts -->
-    <script>
+    <script type="text/javascript">
     navigator.serviceWorker.register('../firebase-messaging.js')
         .then((registration) => {
         messaging.useServiceWorker(registration);
@@ -203,7 +203,7 @@
     </script>
     <!-- Notification -->
 
-    
+
 
 
 </html>
