--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -17,6 +17,7 @@
         <meta name="theme-color" content="#e0e0e0"/>
         <title>MMA Texas</title>
         <link rel="manifest" href="../manifest.json">
+        <link rel="icon" href="media/logo-box-white.png">
         <!-- Metadata -->
 
 
