--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -31,11 +31,10 @@
                             <span class="md-title">Tasks</span>
                             <span class="md-subhead">Enable or Disable</span>
                         </md-card-header-text>
-                    </md-card-header>
-                    <md-divider></md-divider>
+                    </md-card-header>>
                     <md-card-content>
                         <md-list-item>
-                            <md-menu class="md-secondary">
+                            <md-menu>
                                 <md-button class="md-icon-button">
                                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">more_vert</md-icon>
                                 </md-button>
@@ -61,7 +60,6 @@
                             <p>Task Title</p>
                             <md-switch class="md-secondary"></md-switch>
                         </md-list-item>
-                        <md-divider></md-divider>
                     </md-card-content>
                 </md-card>
             </div>
