--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -98,13 +98,13 @@
                 <md-card class="md-whiteframe-4dp" style="background: #fafafa;" flex="100">
                         <md-card-header>
                             <md-card-header-text>
-                                <span class="md-title">Notifications</span>
-                                <span class="md-subhead">Manage Notifications</span>
+                                <span class="md-title">Reports</span>
+                                <span class="md-subhead">Task Reports &amp; Notifications</span>
                             </md-card-header-text>
                         </md-card-header>
                         <md-card-content>
                             <md-tabs md-dynamic-height md-border-bottom>
-                                <md-tab label="All Notifications">
+                                <md-tab label="Notifications">
                                     <md-content style="padding: 0;">
                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                             <md-list class="md-dense" flex>
@@ -143,7 +143,7 @@
                                         </div>
                                     </md-content>
                                 </md-tab>
-                                <md-tab label="Archived">
+                                <md-tab label="Task Run Reports">
                                     <md-content style="padding: 0;">
                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                             <md-list class="md-dense" flex>
