--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -30,7 +30,7 @@
                             <span class="md-title">Tasks</span>
                             <span class="md-subhead">Enable or Disable</span>
                         </md-card-header-text>
-                    </md-card-header>>
+                    </md-card-header>
                     <md-card-content>
                         <!-- <md-list-item>
                             <md-menu>
@@ -61,7 +61,7 @@
                         </md-list-item> -->
                         <md-list class="md-dense" flex>
                             <md-list-item class="md-2-line" flex>
-                                <md-menu class="md-secondary">
+                                <md-menu>
                                     <md-button class="md-icon-button">
                                         <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">more_vert</md-icon>
                                     </md-button>
@@ -109,7 +109,7 @@
                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                             <md-list class="md-dense" flex>
                                                 <md-list-item class="md-2-line" flex>
-                                                    <md-menu class="md-secondary">
+                                                    <md-menu>
                                                         <md-button class="md-icon-button">
                                                             <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">more_vert</md-icon>
                                                         </md-button>
