--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -32,7 +32,7 @@
                         </md-card-header-text>
                     </md-card-header>
                     <md-card-content>
-                        <!-- <md-list-item>
+                        <md-list-item>
                             <md-menu>
                                 <md-button class="md-icon-button">
                                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">more_vert</md-icon>
@@ -40,56 +40,25 @@
                                 <md-menu-content width="4">
                                     <md-menu-item>
                                         <md-button>
-                                        View Notification
+                                        Run Task
                                         </md-button>
                                     </md-menu-item>
                                     <md-menu-item>
                                         <md-button>
-                                        Dismiss Notification
+                                        Delete Task
                                         </md-button>
                                     </md-menu-item>
                                     <md-menu-divider></md-menu-divider>
                                     <md-menu-item>
                                         <md-button>
-                                        Notifications
+                                        View Task
                                         </md-button>
                                     </md-menu-item>
                                 </md-menu-content>
                             </md-menu>
                             <p>Task Title</p>
                             <md-switch class="md-secondary"></md-switch>
-                        </md-list-item> -->
-                        <md-list class="md-dense" flex>
-                            <md-list-item class="md-2-line" flex>
-                                <md-menu>
-                                    <md-button class="md-icon-button">
-                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">more_vert</md-icon>
-                                    </md-button>
-                                    <md-menu-content width="4">
-                                        <md-menu-item>
-                                            <md-button>
-                                            View Task
-                                            </md-button>
-                                        </md-menu-item>
-                                        <md-menu-item>
-                                            <md-button>
-                                            Run Task
-                                            </md-button>
-                                        </md-menu-item>
-                                        <md-menu-divider></md-menu-divider>
-                                        <md-menu-item>
-                                            <md-button>
-                                            Delete Task
-                                            </md-button>
-                                        </md-menu-item>
-                                    </md-menu-content>
-                                </md-menu>
-                                <div class="md-list-item-text">
-                                    <h3 style="font-size: 16px;">Task Title</h3>
-                                </div>
-                                <md-switch class="md-secondary"></md-switch>
-                            </md-list-item>
-                        </md-list>
+                        </md-list-item>
                     </md-card-content>
                 </md-card>
             </div>
@@ -108,7 +77,7 @@
                                     <md-content style="padding: 0;">
                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                             <md-list class="md-dense" flex>
-                                                <md-list-item class="md-2-line" flex>
+                                                <md-list-item flex>
                                                     <md-menu>
                                                         <md-button class="md-icon-button">
                                                             <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">more_vert</md-icon>
@@ -122,12 +91,6 @@
                                                             <md-menu-item>
                                                                 <md-button>
                                                                 Dismiss Notification
-                                                                </md-button>
-                                                            </md-menu-item>
-                                                            <md-menu-divider></md-menu-divider>
-                                                            <md-menu-item>
-                                                                <md-button>
-                                                                Notifications
                                                                 </md-button>
                                                             </md-menu-item>
                                                         </md-menu-content>
