--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -33,29 +33,7 @@
                     </md-card-header>
                     <md-card-content>
                         <md-list-item>
-                            <md-menu>
-                                <md-button class="md-icon-button">
-                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">more_vert</md-icon>
-                                </md-button>
-                                <md-menu-content width="4">
-                                    <md-menu-item>
-                                        <md-button>
-                                        Run Task
-                                        </md-button>
-                                    </md-menu-item>
-                                    <md-menu-item>
-                                        <md-button>
-                                        Delete Task
-                                        </md-button>
-                                    </md-menu-item>
-                                    <md-menu-divider></md-menu-divider>
-                                    <md-menu-item>
-                                        <md-button>
-                                        View Task
-                                        </md-button>
-                                    </md-menu-item>
-                                </md-menu-content>
-                            </md-menu>
+                            <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">settings</md-icon>
                             <p>Task Title</p>
                             <md-switch class="md-secondary"></md-switch>
                         </md-list-item>
