--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -32,8 +32,49 @@
                         </md-card-header-text>
                     </md-card-header>
                     <md-card-content>
+                        <md-list class="md-dense" flex>
+                            <md-list-item>
+                                <md-menu>
+                                    <md-button class="md-icon-button">
+                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">more_vert</md-icon>
+                                    </md-button>
+                                    <md-menu-content width="4">
+                                        <md-menu-item>
+                                            <md-button>
+                                            Run Task
+                                            </md-button>
+                                        </md-menu-item>
+                                        <md-menu-item>
+                                            <md-button>
+                                            Delete Task
+                                            </md-button>
+                                        </md-menu-item>
+                                        <md-menu-divider></md-menu-divider>
+                                        <md-menu-item>
+                                            <md-button>
+                                            View Task
+                                            </md-button>
+                                        </md-menu-item>
+                                    </md-menu-content>
+                                </md-menu>
+                                <div class="md-list-item-text">
+                                    <p style="font-size: 16px;">Notification Name</p>
+                                </div>
+                                <md-switch class="md-secondary"></md-switch>
+                            </md-list-item>
+                        </md-list>
+                    </md-card-content>
+                </md-card>
+                <md-card class="md-card-base md-whiteframe-4dp">
+                    <md-card-header>
+                        <md-card-header-text>
+                            <span class="md-title">Tasks</span>
+                            <span class="md-subhead">Enable or Disable</span>
+                        </md-card-header-text>
+                    </md-card-header>
+                    <md-card-content>
                         <md-list-item>
-                            <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">settings</md-icon>
+                            <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons" ng-click="null">settings</md-icon>
                             <p>Task Title</p>
                             <md-switch class="md-secondary"></md-switch>
                         </md-list-item>
