--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -36,7 +36,7 @@
                             <md-list-item>
                                 <md-menu>
                                     <md-button class="md-icon-button">
-                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">more_vert</md-icon>
+                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="task menu" md-font-library="material-icons">more_vert</md-icon>
                                     </md-button>
                                     <md-menu-content width="4">
                                         <md-menu-item>
@@ -99,7 +99,7 @@
                                                 <md-list-item flex>
                                                     <md-menu>
                                                         <md-button class="md-icon-button">
-                                                            <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">more_vert</md-icon>
+                                                            <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="notification menu" md-font-library="material-icons">more_vert</md-icon>
                                                         </md-button>
                                                         <md-menu-content width="4">
                                                             <md-menu-item>
@@ -115,7 +115,7 @@
                                                         </md-menu-content>
                                                     </md-menu>
                                                     <div class="md-list-item-text">
-                                                        <h3 style="font-size: 16px;">Notification Name</h3>
+                                                        <p style="font-size: 16px;">Notification Name</p>
                                                     </div>
                                                     <md-button class="md-secondary md-icon-button" ng-click="openShare(file)">
                                                         <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
