--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -35,7 +35,7 @@
                         <md-list class="md-dense" flex>
                             <md-list-item>
                                 <md-menu>
-                                    <md-button class="md-icon-button">
+                                    <md-button class="md-icon-button" ng-click="openMenu($mdOpenMenu, $event)">
                                         <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="task menu" md-font-library="material-icons">more_vert</md-icon>
                                     </md-button>
                                     <md-menu-content width="4">
