--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -58,7 +58,7 @@
                                     </md-menu-content>
                                 </md-menu>
                                 <div class="md-list-item-text">
-                                    <p style="font-size: 16px;">Notification Name</p>
+                                    <p style="font-size: 16px;">New Task Name</p>
                                 </div>
                                 <md-switch class="md-secondary"></md-switch>
                             </md-list-item>
@@ -82,8 +82,11 @@
                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                             <md-list class="md-dense" flex>
                                                 <md-list-item flex>
+                                                    <div class="md-list-item-text">
+                                                        <p style="font-size: 16px;">07/02 - Notification Name</p>
+                                                    </div>
                                                     <md-menu>
-                                                        <md-button class="md-icon-button">
+                                                        <md-button class="md-icon-button md-secondary">
                                                             <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="notification menu" md-font-library="material-icons">more_vert</md-icon>
                                                         </md-button>
                                                         <md-menu-content width="4">
@@ -99,12 +102,6 @@
                                                             </md-menu-item>
                                                         </md-menu-content>
                                                     </md-menu>
-                                                    <div class="md-list-item-text">
-                                                        <p style="font-size: 16px;">Notification Name</p>
-                                                    </div>
-                                                    <md-button class="md-secondary md-icon-button" ng-click="openShare(file)">
-                                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
-                                                    </md-button>
                                                 </md-list-item>
                                             </md-list>
                                         </div>
@@ -115,9 +112,10 @@
                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                             <md-list class="md-dense" flex>
                                                 <md-list-item class="md-2-line" flex>
-                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
                                                     <div class="md-list-item-text">
-                                                        <h3 style="font-size: 16px;">No Archived Notifications</h3>
+                                                        <h3 style="font-size: 16px;">07/02 - New Blog Post Task Report</h3>
+                                                        <p style="font-size: 16px;">Successful Deliveries | 99</p>
+                                                        <p style="font-size: 16px;">Failed Deliveries | 1</p>
                                                     </div>
                                                 </md-list-item>
                                             </md-list>
